@@ -1,3 +1,8 @@
+2011-12-07  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* libtiff/tif_dirread.c: fix error reporting when there is no 
+	tag information struct and name (gdal #4373)
+
 2011-10-22  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Update GNU libtool to 2.4.2.
